--- a/local.yml
+++ b/local.yml
@@ -1,10 +1,9 @@
 #!/usr/bin/env ansible-playbook
 ---
 
-- hosts: localhost
-  connection: local
+- hosts: all
   become: yes
 
-  pre_tasks:
+  tasks:
     - debug:
         msg: Hello world!
