Replaced "-based" with "-like" suffix

--- a/roles/_common/tasks/distro-specific.yml
+++ b/roles/_common/tasks/distro-specific.yml
@@ -8,5 +8,5 @@
     find_me:
       files:
         - "{{ ansible_distribution | lower }}.yml"
-        - "{{ ansible_os_family | lower }}-based.yml"
+        - "{{ ansible_os_family | lower }}-like.yml"
         - "generic.yml"
