--- a/roles/create_lxc_environment/tasks/main.yml
+++ b/roles/create_lxc_environment/tasks/main.yml
@@ -5,3 +5,5 @@
   command:
     cmd:  lxd init --preseed
     stdin: "{{ init_preseed | to_nice_yaml }}"
+  environment:
+    PATH: "/var/lib/snapd/snap/bin:{{ ansible_env.PATH }}"
